Add more testing infra, fix constants formatting